# moazbuilds-claudeclaw

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  MEMORY.md  PROJECT.md  README.md  WORKLOG.md  biome.json  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: claude-code-review.yml  lint.yml  marketplace-version-guard.yml  plugin-version-guard.yml  sync-upstream.yml
.planning/: ROADMAP.md  STATE.md  tech-stack.md  v1.0-MILESTONE-AUDIT.md  v1.0-v1.0-MILESTONE-AUDIT.md  workflow.md
.planning/budget-guard-mcp/: REVIEW.md  SPEC.md
.planning/eval-framework-mcp/: REVIEW.md
.planning/llm-router/: SPEC-DELTA-2026-05-29.md  SPEC-DELTA-phase-c.md  SPEC.md
commands/: start.md
docs/: Bus_Runtime_Staging_Guide.md  ClaudeClaw_Plus_Bus_Architecture_Spec.md
scripts/: bump-marketplace-version.ts  bump-plugin-version.ts  capture-sentinel-fixture.ts  start-bus-mcp
skills/: session-recall.md
src/: agents.ts  allowlist.ts  architecture-doc-snapshot.ts  architecture-doc.ts  cli-env-autoload.ts  config.ts  dead-letter-queue.ts  event-log.ts  event-processor.ts  index.ts  jobs.ts  memory.ts  migrations.ts  pending-resume.ts  plugins.ts  preflight.ts  prompt-safety.ts  replay.ts  retry-queue.ts  rotation.ts  runner.ts  sessions.ts  statusline.ts  timezone.ts  watchdog.ts  whisper.ts
tests/: allowlist.test.ts  prompt-safety.test.ts
tools/memory-search/: .gitignore  README.md  pyproject.toml
tools/memory-search/memory_search/: __init__.py  cli.py  config.py  db.py  recall.py
tools/memory-search/tests/: test_db.py
(+439 files in other folders)
