[project]
name = "memory-search"
version = "0.1.0"
description = "Hybrid FTS5 + sentence-transformer recall over Claude Code session history."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Nibbler1250" },
]
dependencies = [
    "numpy>=1.26",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
memory-search = "memory_search.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memory_search*"]
